GitPjt/force-app/main/default/objects/CustumObj1__c/CustumObj1__c.object-meta.xml
<CustomObject>
    <label>CustumObj1</label>
    <nameField>
        <label>CustumObj1名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>