GitPjt/force-app/main/default/objects/CustumObj1__c/fields/CustomDate1__c.field-meta.xml
<CustomField>
    <fullName>CustomDate1__c</fullName>
    <label>CustomDate1</label>
    <type>Date</type>
</CustomField>