GitPjt/force-app/main/default/objects/CustumObj1__c/fields/CustomPicklst1__c.field-meta.xml
<CustomField>
    <fullName>CustomPicklst1__c</fullName>
    <label>CustomPicklst1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>値1</fullName>
            </value>
            <value>
                <fullName>値2</fullName>
            </value>
            <value>
                <fullName>値3</fullName>
            </value>
            <value>
                <fullName>値4</fullName>
            </value>
            <value>
                <fullName>値5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>