GitPjt/force-app/main/default/objects/CustumObj1__c/fields/DevA_Add1__c.field-meta.xml
<CustomField>
    <fullName>DevA_Add1__c</fullName>
    <label>DevA_Add1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>