GitPjt/force-app/main/default/objects/CustumObj1__c/recordTypes/CustumObj1_1RT.recordType-meta.xml
<RecordType>
    <fullName>CustumObj1_1RT</fullName>
    <active>true</active>
    <label>CustumObj1_1RT</label>
</RecordType>