GitPjt/force-app/main/default/objects/CustumObj1__c/recordTypes/CustumObj1_2RT.recordType-meta.xml
<RecordType>
    <fullName>CustumObj1_2RT</fullName>
    <active>true</active>
    <label>CustumObj1_2RT</label>
</RecordType>