GitPjt/force-app/main/default/objects/CustumObj1__c/listViews/ListView1.listView-meta.xml
<ListView>
    <fullName>ListView1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomText1__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ListView1</label>
</ListView>